<resources>
    <string name="app_name">Proyecto Final 2019</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Proyecto Final 2019</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="buscar">Buscar</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Categorias</string>
    <string name="menu_slideshow">Categorias</string>
    <string name="menu_tools">Herramientas</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Salir</string>
</resources>
